Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.5 ----------

[w2l] Bugfix: Fixed problem with lost images in some documents

[w2l] New option: natbib_options is used to set options for natbib.sty (used by Zotero export)

[w2l] Added support for Zotero reference marks (with contributions from Kevin Brubeck Unhammer).
  A new option zotero_bibtex_files has been added to give the names of the BibTeX files from Zotero

---------- version 1.1.4 ----------

[w2x] EPUB bugfix: Fixed problem with URL encoding of fragment identifier in links to document parts

[w2x] New option endnotes_heading: The value of this (if non-empty) is used as heading for the endnotes

[w2x] The option add_bom now only has effect if the encoding is UTF-8

[w2x] Filter bugfix: Added missing classes to produce LaTeX formulas

[w2x] Bugfix: Pretty printing no longer results in unwanted spaces in the text

[w2x] Added support for unnumbered headings

[w2x] Added Finnish translation from Samuli Selin (merged from 1.0.2)

[w2x] Added help content for custom format

[all] Bugfix: Heading styles are now recognized correctly again in old file format (sxw)

---------- version 1.1.3 ----------

[w2x] The standard configuration cleanxhtml.xml now maps footnote and endnote references to <sup>

[w2x] EPUB bugfix: Now includes the entire heading in NCX even if it contains formatting (which is ignored)

[w2l] Added help content for custom format

[all] Filter: Fixed bug with filenames containing spaces and other special characters

[w2x] EPUB bugfix: URL encode links to document parts in the .ncx and .opf files

[w2x] EPUB export no longer generates a title page reference if there is no title page

[w2x] Added (temporary) option zen_hack to support a special requirement from the ePub Zen Garden styles
  (own style for number prefix. This should be replaced by a style map scheme later..)

[w2x] Ignore linked images in EPUB export (EPUB files cannot reference external resources)
