@@ -1,0 +1,111 @@
+# LaTeXOptions strings=Your language
+0.LaTeXOptions.HelpText=
+1.LaTeXOptions.Title=LaTeX-val (Writer2Latex)
+2.LaTeXOptions.FixedLine1.HelpText=
+3.LaTeXOptions.FixedLine1.Label=
+4.LaTeXOptions.GeneralLabel.HelpText=
+5.LaTeXOptions.GeneralLabel.Label=Generelt
+6.LaTeXOptions.ConfigLabel.HelpText=
+7.LaTeXOptions.ConfigLabel.Label=LaTeX-format
+8.LaTeXOptions.Config.HelpText=
+137.Config.StringItemList=Ultra-rein artikkel
+138.Config.StringItemList=Rein artikkel
+139.Config.StringItemList=Standard
+140.Config.StringItemList=Optimalisert for utskrift
+141.Config.StringItemList=Optimalisert for skjerm (pdf)
+142.Config.StringItemList=Eigendefinert
+15.LaTeXOptions.BackendLabel.HelpText=
+16.LaTeXOptions.BackendLabel.Label=Motor
+17.LaTeXOptions.Backend.HelpText=
+116.Backend.StringItemList=Generisk
+117.Backend.StringItemList=Pdf (pdfTeX)
+118.Backend.StringItemList=Postscript (dvips)
+119.Backend.StringItemList=Ikkje spesifisert
+22.LaTeXOptions.InputencodingLabel.HelpText=
+23.LaTeXOptions.InputencodingLabel.Label=Koding
+24.LaTeXOptions.Inputencoding.HelpText=
+120.Inputencoding.StringItemList=US ASCII
+121.Inputencoding.StringItemList=Vesteuropeisk (ISO 8859-1)
+122.Inputencoding.StringItemList=Austeuropeisk (ISO 8859-2)
+123.Inputencoding.StringItemList=Latin/gresk (ISO 8859-7)
+124.Inputencoding.StringItemList=Microsoft austeuropeisk (Cp1250)
+125.Inputencoding.StringItemList=Microsoft kyrillisk (Cp1251)
+126.Inputencoding.StringItemList=Russisk (koi8-r)
+127.Inputencoding.StringItemList=Unicode (UTF8)
+33.LaTeXOptions.Multilingual.HelpText=
+34.LaTeXOptions.Multilingual.Label=Skru p\u00e5 st\u00f8tte for fleire spr\u00e5k
+35.LaTeXOptions.GreekMath.HelpText=
+36.LaTeXOptions.GreekMath.Label=Nytt greske teikn som symbol
+37.LaTeXOptions.AdditionalSymbols.HelpText=
+38.LaTeXOptions.AdditionalSymbols.Label=St\u00f8tt fleire symbol
+39.LaTeXOptions.BibliographyLabel.HelpText=
+40.LaTeXOptions.BibliographyLabel.Label=Bibliografi
+41.LaTeXOptions.UseBibtex.HelpText=
+42.LaTeXOptions.UseBibtex.Label=Nytt BibTeX for bibliografi
+43.LaTeXOptions.BibtexStyleLabel.HelpText=
+44.LaTeXOptions.BibtexStyleLabel.Label=BibTeX-stil
+45.LaTeXOptions.BibtexStyle.HelpText=
+46.BibtexStyle.StringItemList=plain
+47.BibtexStyle.StringItemList=unsrt
+48.BibtexStyle.StringItemList=alpha
+49.BibtexStyle.StringItemList=abbrv
+50.LaTeXOptions.BibtexStyle.Text=
+51.LaTeXOptions.FilesLabel.HelpText=
+52.LaTeXOptions.FilesLabel.Label=Filer
+53.LaTeXOptions.WrapLines.HelpText=
+54.LaTeXOptions.WrapLines.Label=Brekk om lange linjer
+55.LaTeXOptions.WrapLinesAfterLabel.HelpText=
+56.LaTeXOptions.WrapLinesAfterLabel.Label=Etter teikn
+57.LaTeXOptions.WrapLinesAfter.HelpText=
+58.LaTeXOptions.SplitLinkedSections.HelpText=
+59.LaTeXOptions.SplitLinkedSections.Label=Del opp dokument ved lenkja bolkar
+60.LaTeXOptions.SplitToplevelSections.HelpText=
+61.LaTeXOptions.SplitToplevelSections.Label=Del opp dokument ved toppniv\u00e5bolkar
+62.LaTeXOptions.SaveImagesInSubdir.HelpText=
+63.LaTeXOptions.SaveImagesInSubdir.Label=Lagre bilete i undermappe
+64.LaTeXOptions.SpecialContentLabel.HelpText=
+65.LaTeXOptions.SpecialContentLabel.Label=Spesielt innhald
+66.LaTeXOptions.NotesLabel.HelpText=
+67.LaTeXOptions.NotesLabel.Label=Merknader
+68.LaTeXOptions.Notes.HelpText=
+128.Notes.StringItemList=Ikkje eksporter
+129.Notes.StringItemList=Eksporter som kommentarar
+130.Notes.StringItemList=Eksporter som margnoter
+131.Notes.StringItemList=Eksporter som pdf-annotasjonar
+73.LaTeXOptions.Metadata.HelpText=
+74.LaTeXOptions.Metadata.Label=Eksporter dokumenteigenskapar (metadata)
+75.LaTeXOptions.FiguresAndTablesLabel.HelpText=
+76.LaTeXOptions.FiguresAndTablesLabel.Label=Figurar og tabellar
+77.LaTeXOptions.OriginalImageSize.HelpText=
+78.LaTeXOptions.OriginalImageSize.Label=Nytt opphavleg biletstorleik
+79.LaTeXOptions.OptimizeSimpleTables.HelpText=
+80.LaTeXOptions.OptimizeSimpleTables.Label=Optimaliser enkle tabellar
+81.LaTeXOptions.SimpleTableLimitLabel.HelpText=
+82.LaTeXOptions.SimpleTableLimitLabel.Label=Maksbreidd i teikn
+83.LaTeXOptions.SimpleTableLimit.HelpText=
+84.LaTeXOptions.FloatTables.HelpText=
+85.LaTeXOptions.FloatTables.Label=Flyt tabellar
+86.LaTeXOptions.FloatFigures.HelpText=
+87.LaTeXOptions.FloatFigures.Label=Flyt figurar
+88.LaTeXOptions.FloatOptionsLabel.HelpText=
+89.LaTeXOptions.FloatOptionsLabel.Label=Flyt plassering
+90.LaTeXOptions.FloatOptions.HelpText=
+132.FloatOptions.StringItemList=\u00d8vst eller nedst p\u00e5 sida
+133.FloatOptions.StringItemList=\u00d8vst p\u00e5 sida
+134.FloatOptions.StringItemList=Nedst p\u00e5 sida
+135.FloatOptions.StringItemList=Her eller \u00f8vst p\u00e5 sida
+136.FloatOptions.StringItemList=Her eller nedst p\u00e5 sida
+96.LaTeXOptions.AutoCorrectLabel.HelpText=
+97.LaTeXOptions.AutoCorrectLabel.Label=Autokorriger
+98.LaTeXOptions.IgnoreHardPageBreaks.HelpText=
+99.LaTeXOptions.IgnoreHardPageBreaks.Label=Ignorer harde sideskift
+100.LaTeXOptions.IgnoreHardLineBreaks.HelpText=
+101.LaTeXOptions.IgnoreHardLineBreaks.Label=Ignorer harde linjeskift
+102.LaTeXOptions.IgnoreEmptyParagraphs.HelpText=
+103.LaTeXOptions.IgnoreEmptyParagraphs.Label=Ignorer tomme avsnitt
+104.LaTeXOptions.IgnoreDoubleSpaces.HelpText=
+105.LaTeXOptions.IgnoreDoubleSpaces.Label=Ignorer doble mellomrom
+106.LaTeXOptions.ExportButton.HelpText=
+107.LaTeXOptions.ExportButton.Label=Eksporter
+108.LaTeXOptions.CancelButton.HelpText=
+109.LaTeXOptions.CancelButton.Label=Avbryt
