@@ -1,0 +1,131 @@
+# Strings for Dialog Library W2XDialogs=Your language
+0.XhtmlOptions.HelpText=
+1.XhtmlOptions.Title=XHTML-val (Writer2xhtml)
+2.XhtmlOptions.StyleLabel.HelpText=
+3.XhtmlOptions.StyleLabel.Label=Stil
+4.XhtmlOptions.ConfigLabel.HelpText=
+5.XhtmlOptions.ConfigLabel.Label=Nytt stil
+6.XhtmlOptions.Config.HelpText=
+17.XhtmlOptions.ScalingLabel.HelpText=
+18.XhtmlOptions.ScalingLabel.Label=Skalering
+19.XhtmlOptions.Scaling.HelpText=
+20.XhtmlOptions.ScalingPercentLabel.HelpText=
+21.XhtmlOptions.ScalingPercentLabel.Label=%
+22.XhtmlOptions.ColumnScalingLabel.HelpText=
+23.XhtmlOptions.ColumnScalingLabel.Label=Kolonneskalering
+24.XhtmlOptions.ColumnScaling.HelpText=
+25.XhtmlOptions.ColumnScalingPercentLabel.HelpText=
+26.XhtmlOptions.ColumnScalingPercentLabel.Label=%
+27.XhtmlOptions.ConvertToPx.HelpText=
+28.XhtmlOptions.ConvertToPx.Label=Konverter einingar til px (pikslar)
+29.XhtmlOptions.OriginalImageSize.HelpText=
+30.XhtmlOptions.OriginalImageSize.Label=Nytt opphavleg biletstorleik
+31.XhtmlOptions.SpecialContentLabel.HelpText=
+32.XhtmlOptions.SpecialContentLabel.Label=Spesielt innhald
+33.XhtmlOptions.Notes.HelpText=
+34.XhtmlOptions.Notes.Label=Eksporter merknader
+35.XhtmlOptions.UseDublinCore.HelpText=
+36.XhtmlOptions.UseDublinCore.Label=Eksporter dokumenteigenskapar (Dublin Core metadata)
+37.XhtmlOptions.AutoCorrectLabel.HelpText=
+38.XhtmlOptions.AutoCorrectLabel.Label=Autokorriger
+39.XhtmlOptions.IgnoreHardLineBreaks.HelpText=
+40.XhtmlOptions.IgnoreHardLineBreaks.Label=Ignorer hard linjeskift
+41.XhtmlOptions.IgnoreEmptyParagraphs.HelpText=
+42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Ignorer tomme avsnitt
+43.XhtmlOptions.IgnoreDoubleSpaces.HelpText=
+44.XhtmlOptions.IgnoreDoubleSpaces.Label=Ignorer doble mellomrom
+45.XhtmlOptions.FilesLabel.HelpText=
+46.XhtmlOptions.FilesLabel.Label=Filer
+47.XhtmlOptions.Split.HelpText=
+48.XhtmlOptions.Split.Label=Del dokumentet ved overskrifter
+49.XhtmlOptions.SplitLevelLabel.HelpText=
+50.XhtmlOptions.SplitLevelLabel.Label=Overskriftsniv\u00e5
+51.XhtmlOptions.SplitLevel.HelpText=
+52.SplitLevel.StringItemList=1
+53.SplitLevel.StringItemList=2
+54.SplitLevel.StringItemList=3
+55.SplitLevel.StringItemList=4
+56.SplitLevel.StringItemList=5
+57.SplitLevel.StringItemList=6
+58.XhtmlOptions.RepeatLevelsLabel.HelpText=
+59.XhtmlOptions.RepeatLevelsLabel.Label=Gjenta overskriftsniv\u00e5
+60.XhtmlOptions.RepeatLevels.HelpText=
+61.RepeatLevels.StringItemList=0
+62.RepeatLevels.StringItemList=1
+63.RepeatLevels.StringItemList=2
+64.RepeatLevels.StringItemList=3
+65.RepeatLevels.StringItemList=4
+66.RepeatLevels.StringItemList=5
+67.XhtmlOptions.SaveImagesInSubdir.HelpText=
+68.XhtmlOptions.SaveImagesInSubdir.Label=Lagre bilete i undermappe
+69.XhtmlOptions.XsltPathLabel.HelpText=
+70.XhtmlOptions.XsltPathLabel.Label=XSLT-sti
+71.XhtmlOptions.XsltPath.HelpText=
+72.XhtmlOptions.XsltPath.Text=
+73.XhtmlOptions.ExportButton.HelpText=
+74.XhtmlOptions.ExportButton.Label=Eksporter
+75.XhtmlOptions.CancelButton.HelpText=
+76.XhtmlOptions.CancelButton.Label=Avbryt
+77.XhtmlOptionsCalc.HelpText=
+78.XhtmlOptionsCalc.Title=XHTML-val (Calc2xhtml)
+79.XhtmlOptionsCalc.StyleLabel.HelpText=
+80.XhtmlOptionsCalc.StyleLabel.Label=Stil
+81.XhtmlOptionsCalc.ConfigLabel.HelpText=
+82.XhtmlOptionsCalc.ConfigLabel.Label=Nytt stil
+83.XhtmlOptionsCalc.Config.HelpText=
+86.XhtmlOptionsCalc.ScalingLabel.HelpText=
+87.XhtmlOptionsCalc.ScalingLabel.Label=Skalering
+88.XhtmlOptionsCalc.Scaling.HelpText=
+89.XhtmlOptionsCalc.ScalingPercentLabel.HelpText=
+90.XhtmlOptionsCalc.ScalingPercentLabel.Label=%
+91.XhtmlOptionsCalc.ColumnScalingLabel.HelpText=
+92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Kolonneskalering
+93.XhtmlOptionsCalc.ColumnScaling.HelpText=
+94.XhtmlOptionsCalc.ColumnScalingPercentLabel.HelpText=
+95.XhtmlOptionsCalc.ColumnScalingPercentLabel.Label=%
+96.XhtmlOptionsCalc.ConvertToPx.HelpText=
+97.XhtmlOptionsCalc.ConvertToPx.Label=Konverter einingar til px (pikslar)
+98.XhtmlOptionsCalc.OriginalImageSize.HelpText=
+99.XhtmlOptionsCalc.OriginalImageSize.Label=Nytt opphavleg biletstorleik
+100.XhtmlOptionsCalc.SpecialContentLabel.HelpText=
+101.XhtmlOptionsCalc.SpecialContentLabel.Label=Spesielt innhald
+102.XhtmlOptionsCalc.Notes.HelpText=
+103.XhtmlOptionsCalc.Notes.Label=Eksporter merknader
+104.XhtmlOptionsCalc.UseDublinCore.HelpText=
+105.XhtmlOptionsCalc.UseDublinCore.Label=Eksporter dokumenteigenskapar (Dublin Core metadata)
+106.XhtmlOptionsCalc.SheetsLabel.HelpText=
+107.XhtmlOptionsCalc.SheetsLabel.Label=Ark
+108.XhtmlOptionsCalc.DisplayHiddenSheets.HelpText=
+109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=Vis skjulte ark
+110.XhtmlOptionsCalc.DisplayHiddenRowsCols.HelpText=
+111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=Vis skjulte radar og kolonner
+112.XhtmlOptionsCalc.DisplayFilteredRowsCols.HelpText=
+113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=Vis filtrerte radar og kolonner
+114.XhtmlOptionsCalc.ApplyPrintRanges.HelpText=
+115.XhtmlOptionsCalc.ApplyPrintRanges.Label=Nytt utskriftsomr\u00e5de
+116.XhtmlOptionsCalc.UseTitleAsHeading.HelpText=
+117.XhtmlOptionsCalc.UseTitleAsHeading.Label=Nytt tittel som overskrift
+118.XhtmlOptionsCalc.UseSheetNamesAsHeadings.HelpText=Tekst
+119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=Nytt arknamn som overskrifter
+120.XhtmlOptionsCalc.FilesLabel.HelpText=
+121.XhtmlOptionsCalc.FilesLabel.Label=Filer
+122.XhtmlOptionsCalc.CalcSplit.HelpText=
+123.XhtmlOptionsCalc.CalcSplit.Label=Lagre ark i ulike filer
+124.XhtmlOptionsCalc.SaveImagesInSubdir.HelpText=
+125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Lagre bilete i undermappe
+126.XhtmlOptionsCalc.ExportButton.HelpText=
+127.XhtmlOptionsCalc.ExportButton.Label=Eksporter
+128.XhtmlOptionsCalc.CancelButton.HelpText=
+129.XhtmlOptionsCalc.CancelButton.Label=Avbryt
+130.Config.StringItemList=Opphavleg formatering
+131.Config.StringItemList=Sjokolade
+132.Config.StringItemList=Midnatt
+133.Config.StringItemList=Modernist
+134.Config.StringItemList=Gamaldags
+135.Config.StringItemList=St\u00e5l
+136.Config.StringItemList=Sveitsisk
+137.Config.StringItemList=Tradisjonell
+138.Config.StringItemList=Ultramarin
+139.Config.StringItemList=Eigendefinert
+140.Config.StringItemList=Opphavleg formatering
+141.Config.StringItemList=Eigendefinert
