@@ -37,7 +37,7 @@
 45.XhtmlOptions.FilesLabel.HelpText=
 46.XhtmlOptions.FilesLabel.Label=\u0424\u0430\u0439\u043b\u044b
 47.XhtmlOptions.Split.HelpText=
-48.XhtmlOptions.Split.Label=\u0420\u0430\u0437\u0431\u0438\u0432\u0430\u0442\u044c \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442 \u043f\u043e \u0437\u0430\u043a\u043e\u043b\u043e\u0432\u043a\u0430\u043c
+48.XhtmlOptions.Split.Label=\u0420\u0430\u0437\u0431\u0438\u0432\u0430\u0442\u044c \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442 \u043f\u043e \u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043a\u0430\u043c
 49.XhtmlOptions.SplitLevelLabel.HelpText=
 50.XhtmlOptions.SplitLevelLabel.Label=\u0423\u0440\u043e\u0432\u0435\u043d\u044c \u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043a\u043e\u0432
 51.XhtmlOptions.SplitLevel.HelpText=
