@@ -1,0 +1,1 @@
+Writer2xhtml gir Writer og Calc eksportfilter for XHTML og XHTML+MathML
